--- a/index.html
+++ b/index.html
@@ -8,7 +8,29 @@
 
 <!-- navigation -->
   <header>
-      <h1>RUN BUDDY</h1>
+      <h1>
+        <a href="/">RUN BUDDY</a>
+      </h1>
+      <nav>
+      <!--Unordered list element-->  
+        <ul>
+        <!--List Item element-->  
+          <li>
+          <!--Anchor Element -->
+            <a href="#what-we-do"> What We Do</a>
+          </li>
+          <li>
+            <a hre="#what-you-do"> What You Do</a>
+          </li>
+          <li>
+            <a href="#your-trainers">Your Trainers</a>
+          </li>
+          <li>
+            <a href="#reach-out"> Reach Out</a>
+          </li>
+        </ul>
+
+      </nav>
   </header> 
 
 <!-- hero/jumbotron -->
