navigation elements fix

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="#what-we-do"> What We Do</a>
           </li>
           <li>
-            <a hre="#what-you-do"> What You Do</a>
+            <a href="#what-you-do"> What You Do</a>
           </li>
           <li>
             <a href="#your-trainers">Your Trainers</a>
