--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="utf-8" />
         <title> Run Buddy</title>
+
+      <!-- CSS link-->  
+        <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
     </head>
     <body>
 
